<resources>
    <string name="app_name">My Splash</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_provider_name">file_provider</string>
    <string name="setting_frag_lang_value_tv">English</string>
    <string name="main_bottom_sheet_settings_icon">Settings</string>
    <string name="main_bottom_sheet_about_icon">About</string>
    <string name="main_tabs_item_menu">menu</string>
    <string name="main_tabs_item_search">search</string>
    <string name="menu_item_sort">sort</string>
    <string name="home">home</string>
    <string name="collection">collection</string>
    <string name="camera">Camera</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="shutter_speed">Shutter Speed</string>
    <string name="iso">ISO</string>
    <string name="dimentions">Dimentions</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>
    <string name="set_as_wallpaper">SET AS WALLPAPER</string>
    <string name="setting_lang_dialog_lang_tv">Language</string>
    <string name="setting_lang_dialog_eng_rb">English</string>
    <string name="setting_lang_dialog_fa_rb">Persian</string>
    <string name="setting_lang_dialog_cancel_tv">Cancel</string>
    <string name="setting_theme_dialog_titile_tv">Theme</string>
    <string name="setting_theme_dialog_light_rb">Light</string>
    <string name="setting_theme_dialog_dark_rb">Dark</string>
    <string name="setting_theme_dialog_cancel_tv">Cancel</string>
    <string name="sort_collection_dialog_tv">Sort By</string>
    <string name="sort_collection_dialog_rb">All</string>
    <string name="sort_home_dialog_title">Sort By</string>
    <string name="sort_home_dialog_latest_rb">Latest</string>
    <string name="sort_home_dialog_oldest_rb">Oldest</string>
    <string name="sort_home_dialog_popular_rb">Popular</string>
    <string name="hint_search">Search</string>
    <string name="photo">photo</string>
    <string name="settings_frag_general_tv">General</string>
    <string name="settings_frag_language_tv">Language</string>
    <string name="settings_frag_theme_tv">Theme</string>
    <string name="settings_frag_title_page">Settings</string>
    <string name="fragment_settings_system_default">System default</string>
</resources>