<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16mdp">

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15mdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_home_dialog_title"
            android:textSize="@dimen/_12mdp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/sort_dialog_latest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_home_dialog_latest_rb" />

        <RadioButton
            android:id="@+id/sort_dialog_oldest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_home_dialog_oldest_rb" />

        <RadioButton
            android:id="@+id/sort_dialog_popular_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_home_dialog_popular_rb" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
