<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15mdp"
    tools:context=".MainActivity">

    <!--text view for displaying the selected theme-->
    <TextView
        android:id="@+id/idtvTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:paddingStart="@dimen/_5mdp"
        android:paddingEnd="@dimen/_5mdp"
        android:text="@string/setting_theme_dialog_titile_tv"
        android:textSize="@dimen/_12font_mdp"
        android:textStyle="bold" />

    <!--radio group for switching theme-->
    <RadioGroup
        android:id="@+id/fragment_setting_RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idtvTheme"
        android:layout_marginTop="@dimen/_15mdp"
        android:orientation="vertical"
        android:padding="4dp">

        <!--radio button for light theme-->

        <RadioButton
            android:id="@+id/fragment_setting_light_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/setting_theme_dialog_light_rb" />

        <!--radio button for dark theme-->
        <RadioButton
            android:id="@+id/fragment_setting_dark_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/setting_theme_dialog_dark_rb" />
        <RadioButton
            android:id="@+id/fragment_setting_systemDefault_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/fragment_settings_system_default" />


    </RadioGroup>

    <TextView
        android:id="@+id/fragment_setting_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_setting_RG"
        android:layout_alignParentEnd="true"
        android:text="@string/setting_theme_dialog_cancel_tv"
        android:textSize="@dimen/_12font_mdp"
        android:textStyle="bold" />

</RelativeLayout>
